# X-papers

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  a.out
.github/workflows/: cmake.yml
cmake/: CheckCompiler.cmake  CompileOptions.cmake  Helpers.cmake  Sanitize.cmake  Werror.cmake
examples/: xpapers.py
install/: paperconfig.py
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  Configurator.cpp  Configurator.hpp  main.cpp
src/Engine/: CMakeLists.txt
src/Engine/RenderEngine/: CMakeLists.txt  Color.hpp  GVec.hpp  REngine.cpp  REngine.hpp  XCBStub.cpp
src/Engine/WallpaperEngine/: Background.cpp  Background.hpp  CMakeLists.txt  Connector.cpp  Connector.hpp  Event.hpp  MetaClass.hpp  MetaDefaults.hpp  MetaObject.hpp  MetaTypes.hpp  MetaUtils.hpp  WallpaperEngine.cpp  WallpaperEngine.hpp  Widget.cpp  Widget.hpp
src/Engine/WinEngine/: CMakeLists.txt  VideoHandler.cpp  VideoHandler.hpp  WindowEngine.cpp  WindowEngine.hpp  XDisplayHandler.cpp  XDisplayHandler.hpp  XEventHandler.hpp  XHandler.hpp  XManager.cpp  XManager.hpp  XWindowHandler.cpp  XWindowHandler.hpp  engine.cpp  engine.hpp  glfwRender.cpp  glfwRender.hpp  glfwVideo.cpp  glfwVideo.hpp  proto.hpp
src/Engine/WinEngine/FFRender/: CMakeLists.txt  VideoHandler.cpp  VideoHandler.hpp
src/Plugins/: CMakeLists.txt
src/Plugins/API/: CMakeLists.txt  PPython.c  PaperPy.cpp  PaperPy.hpp
src/Plugins/API/Python/: CMakeLists.txt  PPython.c  PPython.cpp  PPython.hpp  PaperPy.cpp  PaperPy.hpp  PyCInterface.h
src/Plugins/Widget/: CMakeLists.txt
src/Plugins/Widget/BaseWidgets/: CMakeLists.txt  Module.cpp  SpriteWidget.hpp  Sprited.hpp
src/Plugins/Widget/BaseWidgets/decor/: Border.hpp
src/Plugins/Widget/BaseWidgets/widgets/: Clock.cpp  Clock.hpp  Label.cpp  Label.hpp
src/Plugins/Widget/Label/: CMakeLists.txt  Label.cpp  Label.hpp
src/Plugins/Widget/Movie/: CMakeLists.txt  Movie.cpp  Movie.hpp
src/Utilities/: CMakeLists.txt  defines.hpp  log.cpp  log.hpp  optional.hpp  pair.hpp  utils.hpp
